k8s/socketserver-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: clusterchat-server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: clusterchat-server
    spec:
      containers:
      - name: clusterchat-server
        image: dolphub/clusterchat-server:0.1.0
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: clusterchat-server
