k8s/webapp-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: clusterchat-webapp
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: clusterchat-webapp
    spec:
      containers:
      - name: clusterchat-webapp
        image: dolphub/clusterchat-webapp:0.1.0
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  type: ClusterIP
  ports:
  - port: 3001
    targetPort: 3001
  selector:
    app: clusterchat-webapp
